--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-scrollmagic": "^2.3.0",
     "react-search-field": "^2.0.1",
     "react-stars": "^2.2.5",
+    "react-sticky": "^6.0.3",
+    "react-stickynode": "^4.0.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "web-vitals": "^1.1.2"
