--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@u-wave/react-vimeo": "^0.9.5",
+    "firebase": "^9.6.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hover-image": "^2.0.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-scrollmagic": "^2.3.0",
     "react-search-field": "^2.0.1",
