--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/material": "^5.3.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -18,17 +22,20 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hover-image": "^2.0.1",
+    "react-image-magnify": "^2.7.4",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-scrollmagic": "^2.3.0",
     "react-search-field": "^2.0.1",
+    "react-slick": "^0.28.1",
     "react-stars": "^2.2.5",
     "react-sticky": "^6.0.3",
     "react-stickynode": "^4.0.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
