--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@u-wave/react-vimeo": "^0.9.5",
-    "firebase": "^9.6.3",
+    "firebase": "^9.6.9",
+    "homepage": ".",
     "node-sass": "^6.0.1",
+    "rc-dropdown": "^4.0.1",
+    "rc-menu": "^9.6.0",
     "react": "^17.0.2",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
     "react-hover-image": "^2.0.1",
     "react-image-magnify": "^2.7.4",
     "react-player": "^2.9.0",
-    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-scrollmagic": "^2.3.0",
@@ -33,7 +36,6 @@
     "react-stars": "^2.2.5",
     "react-sticky": "^6.0.3",
     "react-stickynode": "^4.0.0",
-    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
