--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "herico-app",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -13,16 +14,23 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "^5.0.0-beta.5",
     "@mui/material": "^5.3.1",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@u-wave/react-vimeo": "^0.9.5",
+    "bootstrap": "^5.2.0",
+    "concurrently": "^7.3.0",
+    "express": "^4.18.1",
     "firebase": "^9.6.9",
     "homepage": ".",
+    "node": "^16.17.0",
     "node-sass": "^6.0.1",
     "rc-dropdown": "^4.0.1",
     "rc-menu": "^9.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
     "react-hover-image": "^2.0.1",
@@ -38,6 +46,7 @@
     "react-stickynode": "^4.0.0",
     "redux-logger": "^3.0.6",
     "slick-carousel": "^1.8.1",
+    "stripe": "^10.5.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
