--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "herico-app",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -26,7 +27,7 @@
     "node-sass": "^6.0.1",
     "rc-dropdown": "^4.0.1",
     "rc-menu": "^9.6.0",
-    "react": "^16.8.0",
+    "react": "15.3.0",
     "react-bootstrap": "^2.5.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
