--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "node-sass": "^6.0.1",
     "rc-dropdown": "^4.0.1",
     "rc-menu": "^9.6.0",
-    "react": "15.3.0",
+    "react": "^16.8.0",
     "react-bootstrap": "^2.5.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
